examples/pos/int_ufcs.effekt
def main() = {
  1234567890123.println
  println(1234567890123)
}

