examples/neg/namer/same_type.effekt
type Foo {}
type Foo {} // ERROR

def main() = ()